--- a/build.gradle
+++ b/build.gradle
@@ -49,11 +49,11 @@ test {
 }
 
 application {
-    mainClass.set("simba.ui.Launcher")
+    mainClass.set("main.ui.Launcher")
 }
 
 shadowJar {
-    archiveBaseName = "simba"
+    archiveFileName = 'simba.jar'
 }
 
 run{
